[package]
name = "restroberto-client"
version = "0.1.0"
edition = "2018"
readme = "README.md"
repository = "https://github.com/thetipo01/restroberto"
homepage = "https://github.com/thetipo01/restroberto"

[features]
default = ["tls"]
tls = ["ureq/tls"]

[dependencies.ureq]
version = "2.2.0"
default-features = false
